--- a/src/main/resources/com/lightmatter/clickshow/hello-view.fxml
+++ b/src/main/resources/com/lightmatter/clickshow/hello-view.fxml
@@ -3,16 +3,29 @@
 <?import javafx.geometry.*?>
 <?import javafx.scene.chart.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
-<VBox alignment="TOP_CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lightmatter.clickshow.HelloController">
-    <padding>
-        <Insets left="20.0" right="20.0" top="30.0" />
-    </padding>
+<VBox alignment="TOP_CENTER" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="com.lightmatter.clickshow.HelloController" style="-fx-background-color: #ebfbf7;">
 
-    <Label contentDisplay="TOP" style="-fx-font-size: 30px;" text="我今日点击战绩报告" textAlignment="CENTER">
+    <HBox alignment="TOP_RIGHT">
+        <padding>
+            <Insets left="10.0" right="5.0" top="5.0" />
+        </padding>
+        <Button fx:id="more" onAction="#goSettingView" >
+            <graphic>
+                <ImageView fitHeight="22.0" fitWidth="24.0">
+                    <image>
+                        <Image url="@../../../images/more.png" />
+                    </image></ImageView>
+            </graphic>
+        </Button>
+
+    </HBox>
+    <Label contentDisplay="TOP" style="-fx-font-size: 30px;" text="我的点击战绩报告" textAlignment="CENTER">
       <font>
          <Font name="System Bold" size="26.0" />
       </font>
@@ -31,34 +44,48 @@
                </Stop>
             </stops>
          </RadialGradient>
-      </textFill></Label>
+      </textFill>
+    </Label>
 
-    <HBox alignment="BASELINE_CENTER" spacing="20.0">
-        <padding>
-            <Insets left="20.0" right="20.0" top="20.0" />
-        </padding>
-        <Label style="-fx-font-size: 24px;" text="鼠标点击次数：" />
-        <Label fx:id="clickMouseText" style="-fx-font-size: 24px;" text=" 0 " textFill="#15e442">
-         <font>
-            <Font size="30.0" />
-         </font></Label>
-        <Label style="-fx-font-size: 24px;" text="键盘点击次数：" />
-        <Label fx:id="clickKeyboardText" style="-fx-font-size: 24px;" text=" 0 " textFill="#0bb92b">
-         <font>
-            <Font size="30.0" />
-         </font></Label>
-    </HBox>
+    <VBox>
+        <HBox alignment="CENTER" spacing="30.0">
+            <padding>
+                <Insets bottom="5.0" left="20.0" right="5.0" top="10.0" />
+            </padding>
+
+            <Label style="-fx-font-size: 24px;" text="今日：鼠标点击次数" />
+            <Label fx:id="clickMouseText" style="-fx-font-size: 24px;" text=" 0 " textFill="#15e442">
+                <font>
+                    <Font size="30.0" />
+                </font></Label>
+            <Label style="-fx-font-size: 24px;" text="键盘点击次数" />
+            <Label fx:id="clickKeyboardText" style="-fx-font-size: 24px;" text=" 0 " textFill="#15e442">
+                <font>
+                    <Font size="30.0" />
+                </font></Label>
+
+        </HBox>
+        <!--    查看昨天数据-->
+        <HBox fx:id="other" alignment="BASELINE_CENTER">
+            <padding>
+                <Insets left="20.0" right="20.0" />
+            </padding>
+            <Label style="-fx-font-size: 15px;" text="昨日：鼠标点击次数" />
+            <Label fx:id="otherClickMouseText" style="-fx-font-size: 17px;" text=" 0 " textFill="#081c18" />
+            <Label style="-fx-font-size: 15px;" text="键盘点击次数" />
+            <Label fx:id="otherClickKeyboardText" style="-fx-font-size: 17px;" text=" 0 " textFill="#000000" />
+        </HBox>
+    </VBox>
+
    <BarChart fx:id="barChart">
-     <xAxis >
+     <xAxis>
        <CategoryAxis side="BOTTOM" />
      </xAxis>
      <yAxis>
        <NumberAxis side="LEFT" />
      </yAxis>
    </BarChart>
-
-
-
-
-<!--    <Button text="Hello!" onAction="#onHelloButtonClick"/>-->
+    <padding>
+        <Insets left="15.0" right="15.0" bottom="10"/>
+    </padding>
 </VBox>
